--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <div style="display: flex; flex-direction: column; align-items: center; gap: 20px;">
-    <div style="position: relative; width: 90%; height: 0; padding-top: 56.2225%;
-     padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); overflow: hidden;
-     border-radius: 8px;">
+    <!-- First Canva Design -->
+    <div style="position: relative; width: 90%; padding-top: 56.25%; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); border-radius: 8px; overflow: hidden;">
       <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none;"
         src="https://www.canva.com/design/DAGfvVccT1E/0hvG3KyvCgFhyMbGGMmfqg/view?embed" allowfullscreen>
       </iframe>
     </div>
   
-    <div style="position: relative; width: 90%; height: 0; padding-top: 56.2225%;
-     padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); overflow: hidden;
-     border-radius: 8px;">
+    <!-- Second Canva Design -->
+    <div style="position: relative; width: 90%; padding-top: 56.25%; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); border-radius: 8px; overflow: hidden;">
       <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none;"
-        src="ANOTHER_CANVA_LINK_HERE" allowfullscreen>
+        src="YOUR_SECOND_CANVA_LINK_HERE" allowfullscreen>
+      </iframe>
+    </div>
+  
+    <!-- Third Canva Design (Add More as Needed) -->
+    <div style="position: relative; width: 90%; padding-top: 56.25%; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); border-radius: 8px; overflow: hidden;">
+      <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none;"
+        src="YOUR_THIRD_CANVA_LINK_HERE" allowfullscreen>
       </iframe>
     </div>
   </div>
