--- a/index.html
+++ b/index.html
@@ -1,63 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canva Designs</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 20px;
-            width: 90%;
-            max-width: 800px;
-        }
-        .canva-frame {
-            position: relative;
-            width: 100%;
-            padding-top: 56.25%; /* 16:9 Aspect Ratio */
-            box-shadow: 0 2px 8px rgba(63, 69, 81, 0.16);
-            border-radius: 8px;
-            overflow: hidden;
-            background: white;
-        }
-        .canva-frame iframe {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            border: none;
-        }
-    </style>
-</head>
-<body>
-
-    <div class="container">
-        <!-- First Canva Design -->
-        <div class="canva-frame">
-            <iframe loading="lazy" src="https://www.canva.com/design/DAGfvVccT1E/0hvG3KyvCgFhyMbGGMmfqg/view?embed" allowfullscreen></iframe>
-        </div>
-
-        <!-- Second Canva Design -->
-        <div class="canva-frame">
-            <iframe loading="lazy" src="YOUR_SECOND_CANVA_LINK_HERE" allowfullscreen></iframe>
-        </div>
-
-        <!-- Third Canva Design -->
-        <div class="canva-frame">
-            <iframe loading="lazy" src="YOUR_THIRD_CANVA_LINK_HERE" allowfullscreen></iframe>
-        </div>
+<div style="display: flex; flex-direction: column; align-items: center; gap: 20px; width: 100%;">
+    <!-- First Canva Design -->
+    <div style="position: relative; width: 90%; height: 500px; box-shadow: 0 2px 8px rgba(63,69,81,0.16); border-radius: 8px; overflow: hidden;">
+        <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none;"
+            src="https://www.canva.com/design/DAGfvVccT1E/0hvG3KyvCgFhyMbGGMmfqg/view?embed" allowfullscreen>
+        </iframe>
     </div>
 
-</body>
-</html>
+    <!-- Second Canva Design -->
+    <div style="position: relative; width: 90%; height: 500px; box-shadow: 0 2px 8px rgba(63,69,81,0.16); border-radius: 8px; overflow: hidden;">
+        <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none;"
+            src="YOUR_SECOND_CANVA_LINK_HERE" allowfullscreen>
+        </iframe>
+    </div>
+
+    <!-- Third Canva Design -->
+    <div style="position: relative; width: 90%; height: 500px; box-shadow: 0 2px 8px rgba(63,69,81,0.16); border-radius: 8px; overflow: hidden;">
+        <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none;"
+            src="YOUR_THIRD_CANVA_LINK_HERE" allowfullscreen>
+        </iframe>
+    </div>
+</div>
