--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         @media (max-width:700px){
             iframe{
-                height: 700px;
+                min-height: 900px;
             }
         }
     </style>
