--- a/index.html
+++ b/index.html
@@ -1,25 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        @media (max-width:700px){
-            iframe{
-                min-height: 900px;
-            }
-        }
-    </style>
-</head>
-<body>
-    <div style="position: relative; width: 100%; height: 0; padding-top: 56.2225%;
+<div style="position: relative; width: 100%; height: 0; padding-top: 56.2225%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
   <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https://www.canva.com/design/DAGfvVccT1E/0hvG3KyvCgFhyMbGGMmfqg/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+    src="https://www.canva.com/design/DAGhi7dEt1k/D7PM7oSTAupZsrGB9stTiA/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGfvVccT1E&#x2F;0hvG3KyvCgFhyMbGGMmfqg&#x2F;view?utm_content=DAGfvVccT1E&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">TrendyWear</a> by m pooja
-</body>
-</html>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGhi7dEt1k&#x2F;D7PM7oSTAupZsrGB9stTiA&#x2F;view?utm_content=DAGhi7dEt1k&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Your paragraph text</a> by m pooja
