--- a/index.html
+++ b/index.html
@@ -1,8 +1,56 @@
-<div style="position: relative; width: 100%; height: 0; padding-top: 56.2225%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https://www.canva.com/design/DAGhi7dEt1k/D7PM7oSTAupZsrGB9stTiA/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-  </iframe>
-</div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGhi7dEt1k&#x2F;D7PM7oSTAupZsrGB9stTiA&#x2F;view?utm_content=DAGhi7dEt1k&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Your paragraph text</a> by m pooja
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Full-Screen Canva Embed</title>
+    <style>
+        /* Center the iframe and make it responsive */
+        .canva-container {
+            position: relative;
+            width: 90%; /* Adjust width for better visibility */
+            max-width: 800px; /* Limit max size */
+            height: 0;
+            padding-top: 56.25%; /* Aspect ratio for better scaling */
+            margin: 1.6em auto; /* Center the iframe */
+            box-shadow: 0 2px 8px rgba(63, 69, 81, 0.16);
+            border-radius: 8px;
+            overflow: hidden;
+        }
+
+        .canva-container iframe {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            border: none;
+        }
+
+        /* 🔹 Full-Screen on Small Screens */
+        @media (max-width: 700px) {
+            .canva-container {
+                width: 100%;
+                height: 100vh; /* Full-screen height */
+                padding-top: 0; /* Remove aspect ratio restriction */
+            }
+
+            .canva-container iframe {
+                height: 100vh; /* Make iframe take full screen */
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="canva-container">
+        <iframe loading="lazy"
+            src="https://www.canva.com/design/DAGhi7dEt1k/D7PM7oSTAupZsrGB9stTiA/view?embed"
+            allowfullscreen="allowfullscreen"
+            allow="fullscreen">
+        </iframe>
+    </div>
+
+    <a href="https://www.canva.com/design/DAGhi7dEt1k/D7PM7oSTAupZsrGB9stTiA/view?utm_content=DAGhi7dEt1k&utm_campaign=designshare&utm_medium=embeds&utm_source=link"
+        target="_blank" rel="noopener">Your paragraph text</a> by M Pooja
+</body>
+</html>
