--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full-Screen Canva Embed</title>
+<style>
+    *{
+        background-color: darkgray;
+    }
+</style>
 </head>
 <body>
 
@@ -11,9 +16,10 @@
     padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
     border-radius: 8px; will-change: transform;">
      <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-       src="https://www.canva.com/design/DAGimNqIZrk/Z3hB3BmrcAst-NKPyks_tg/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+       src="https://www.canva.com/design/DAGitCCiTJA/dFu-vvGrNqJs13X08XiUCQ/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
      </iframe>
    </div>
-   <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGimNqIZrk&#x2F;Z3hB3BmrcAst-NKPyks_tg&#x2F;view?utm_content=DAGimNqIZrk&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Dark Blue and Beige Simple Dark Consultancy Portfolio &amp; Resume Website</a> by pavithra
+   <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGitCCiTJA&#x2F;dFu-vvGrNqJs13X08XiUCQ&#x2F;view?utm_content=DAGitCCiTJA&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Design</a> by pavithra
+
 </body>
 </html>
